# thingy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh
.cargo/: config
src/: branch_actor.rs  build_actor.rs  git_utils.rs  job_actor.rs  main.rs  models.rs  root_actor.rs  thingy.rs
static/: index.html  index.js
