[package]
name = "thingy"
version = "0.2.0"
authors = ["n-k <nipunkumar@outlook.com>"]
description = "Lightweight build server and thing-doer"
homepage = "https://github.com/n-k/thingy"
repository = "https://github.com/n-k/thingy"
keywords = ["build", "git", "automation"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]
license = "MIT"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
git2 = "0.13"
failure = "0.1"
chrono = "0.4"
tempfile = "3"
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5.0"
